Fixed broken layout from previous merge

--- a/website/style.css
+++ b/website/style.css
@@ -121,21 +121,6 @@ body, textarea, button {
 	right: -10px;
 }
 
-
-
-
-
-
-
-
-
-
-/* form > input {
-    width: 100px;
-    height: 100px;
-    background: green;
-} */
-
  /* 
   * 
   * II. PAGE ELEMENTS
